Walidoux.whatsapp-inviter.e518342b5f48da2074c9a15eaddfe47ad8466362
Running as unit: run-p1379562-i13959698.scope; invocation ID: 568a6bf3963e48539f5320c40ebcfdb7
   Compiling proc-macro2 v1.0.103
   Compiling unicode-ident v1.0.22
   Compiling quote v1.0.42
    Checking cfg-if v1.0.4
   Compiling libc v0.2.177
   Compiling serde_core v1.0.228
   Compiling typenum v1.19.0
   Compiling version_check v0.9.5
    Checking subtle v2.6.1
   Compiling shlex v1.3.0
   Compiling generic-array v0.14.7
   Compiling either v1.15.0
   Compiling find-msvc-tools v0.1.5
   Compiling cc v1.2.46
   Compiling syn v2.0.110
   Compiling fastrand v2.3.0
   Compiling parking_lot_core v0.9.12
    Checking smallvec v1.15.1
    Checking scopeguard v1.2.0
   Compiling anyhow v1.0.100
    Checking lock_api v0.4.14
    Checking log v0.4.28
   Compiling serde v1.0.228
    Checking crypto-common v0.1.7
    Checking bytes v1.11.0
    Checking parking_lot v0.12.5
   Compiling itertools v0.14.0
    Checking pin-project-lite v0.2.16
   Compiling autocfg v1.5.0
   Compiling heck v0.5.0
    Checking cpufeatures v0.2.17
   Compiling getrandom v0.3.4
   Compiling num-traits v0.2.19
    Checking block-buffer v0.10.4
   Compiling siphasher v1.0.1
   Compiling rustix v1.1.2
   Compiling phf_shared v0.13.1
    Checking digest v0.10.7
    Checking block-padding v0.3.3
   Compiling serde_json v1.0.145
   Compiling linux-raw-sys v0.11.0
   Compiling bitflags v2.10.0
   Compiling zerocopy v0.8.27
   Compiling regex-syntax v0.8.8
   Compiling equivalent v1.0.2
   Compiling hashbrown v0.16.0
    Checking inout v0.1.4
   Compiling phf_generator v0.13.1
   Compiling ring v0.17.14
   Compiling indexmap v2.12.0
   Compiling crossbeam-utils v0.8.21
   Compiling once_cell v1.21.3
   Compiling semver v1.0.27
   Compiling regex-automata v0.4.13
   Compiling fixedbitset v0.5.7
   Compiling rustc_version v0.4.1
   Compiling petgraph v0.7.1
   Compiling tempfile v3.23.0
    Checking cipher v0.4.4
   Compiling multimap v0.10.1
   Compiling regex v1.12.2
   Compiling curve25519-dalek v4.1.3
   Compiling serde_derive v1.0.228
   Compiling zeroize_derive v1.4.2
   Compiling prost-derive v0.14.1
   Compiling tokio-macros v2.6.0
    Checking zeroize v1.8.2
    Checking rustls-pki-types v1.13.0
    Checking ppv-lite86 v0.2.21
    Checking rand_core v0.9.3
    Checking universal-hash v0.5.1
    Checking socket2 v0.6.1
    Checking getrandom v0.2.16
    Checking mio v1.1.0
    Checking signal-hook-registry v1.4.6
   Compiling ident_case v1.0.1
    Checking opaque-debug v0.3.1
   Compiling ryu v1.0.20
   Compiling crc32fast v1.5.0
   Compiling fnv v1.0.7
   Compiling itoa v1.0.15
   Compiling strsim v0.11.1
   Compiling memchr v2.7.6
   Compiling prost v0.14.1
    Checking untrusted v0.9.0
   Compiling darling_core v0.21.3
   Compiling prost-types v0.14.1
    Checking tokio v1.48.0
   Compiling prost-build v0.14.1
    Checking polyval v0.6.2
    Checking rand_chacha v0.9.0
   Compiling curve25519-dalek-derive v0.1.1
   Compiling phf_codegen v0.13.1
   Compiling httparse v1.10.1
   Compiling rustls v0.23.35
    Checking base64 v0.22.1
    Checking zlib-rs v0.5.2
   Compiling thiserror v2.0.17
   Compiling waproto v0.1.0 (https://github.com/jlucaso1/whatsapp-rust#546323b4)
   Compiling wacore-binary v0.1.0 (https://github.com/jlucaso1/whatsapp-rust#546323b4)
    Checking rand v0.9.2
   Compiling darling_macro v0.21.3
    Checking ghash v0.5.1
    Checking libz-rs-sys v0.5.2
    Checking rustls-webpki v0.103.8
   Compiling thiserror-impl v2.0.17
   Compiling phf_macros v0.13.1
   Compiling derive_more-impl v2.0.1
    Checking ctr v0.9.2
    Checking aes v0.8.4
    Checking uuid v1.18.1
    Checking hmac v0.12.1
    Checking aead v0.5.2
    Checking iana-time-zone v0.1.64
    Checking rand_core v0.6.4
   Compiling winnow v0.7.13
   Compiling vcpkg v0.2.15
   Compiling pkg-config v0.3.32
    Checking phf v0.13.1
   Compiling libsqlite3-sys v0.35.0
    Checking http v1.3.1
    Checking x25519-dalek v2.0.1
    Checking chrono v0.4.42
    Checking aes-gcm v0.10.3
    Checking hkdf v0.12.4
    Checking derive_more v2.0.1
    Checking flate2 v1.1.5
   Compiling darling v0.21.3
   Compiling async-trait v0.1.89
   Compiling displaydoc v0.2.5
    Checking cbc v0.1.2
   Compiling toml_parser v1.0.4
   Compiling toml_datetime v0.7.3
   Compiling serde_spanned v1.0.3
    Checking sha2 v0.10.9
    Checking sha1 v0.10.6
    Checking arrayref v0.3.9
   Compiling diesel_derives v2.3.4
    Checking futures-sink v0.3.31
    Checking hex v0.4.3
    Checking futures-core v0.3.31
   Compiling toml v0.9.8
   Compiling dsl_auto_type v0.2.0
    Checking serde-big-array v0.5.1
    Checking aho-corasick v1.1.4
    Checking webpki-roots v1.0.4
    Checking concurrent-queue v2.5.0
   Compiling diesel_table_macro_syntax v0.3.0
    Checking scheduled-thread-pool v0.2.7
    Checking parking v2.2.1
    Checking md5 v0.8.0
    Checking event-listener v5.4.1
    Checking r2d2 v0.8.10
   Compiling migrations_internals v2.3.0
   Compiling futures-macro v0.3.31
    Checking futures-task v0.3.31
    Checking pin-utils v0.1.0
    Checking utf8parse v0.2.2
   Compiling virtue v0.0.18
    Checking downcast-rs v2.0.2
   Compiling portable-atomic v1.11.1
    Checking slab v0.4.11
   Compiling bincode_derive v2.0.1
    Checking futures-util v0.3.31
    Checking anstyle-parse v0.2.7
   Compiling migrations_macros v2.3.0
    Checking event-listener-strategy v0.5.4
    Checking tokio-rustls v0.26.4
    Checking tokio-util v0.7.17
    Checking ureq-proto v0.5.2
    Checking pxfm v0.1.25
    Checking simdutf8 v0.1.5
    Checking colorchoice v1.0.4
    Checking anstyle-query v1.1.3
    Checking anstyle v1.0.11
    Checking utf-8 v0.7.6
   Compiling moka v0.12.11
    Checking percent-encoding v2.3.2
    Checking unty v0.0.4
    Checking is_terminal_polyfill v1.70.1
    Checking bincode v2.0.1
    Checking anstream v0.6.19
    Checking ureq v3.1.4
    Checking tokio-websockets v0.13.0
    Checking async-lock v3.4.1
    Checking env_filter v0.1.4
    Checking crossbeam-channel v0.5.15
    Checking moxcms v0.7.9
    Checking crossbeam-epoch v0.9.18
    Checking tagptr v0.2.0
    Checking jiff v0.2.16
    Checking bytemuck v1.24.0
    Checking byteorder-lite v0.1.0
    Checking hashbrown v0.14.5
    Checking dashmap v6.1.0
    Checking lazy_static v1.5.0
    Checking diesel v2.3.3
    Checking env_logger v0.11.8
    Checking image v0.25.9
    Checking qrcode v0.14.1
error[E0271]: type mismatch resolving `<DB as TypeMetadata>::MetadataLookup == &mut <DB as TypeMetadata>::MetadataLookup`
   --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/diesel-2.3.3/src/query_builder/ast_pass.rs:228:51
    |
228 |             } => collector.push_bound_value(bind, metadata_lookup)?,
    |                                                   ^^^^^^^^^^^^^^^ types differ

For more information about this error, try `rustc --explain E0271`.
error: could not compile `diesel` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
